lab01/intro-app.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: intro-app
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: intro-app
    spec:
      containers:
        - name: intro-app
          image: nginx:1.13
          ports:
          - containerPort: 80
          volumeMounts:
          - mountPath: /usr/share/nginx/html
            name: config-volume
      volumes:
        - name: config-volume
          configMap:
            name: nginx-config
---
apiVersion: v1
kind: Service
metadata:
  name: intro-app
spec:
  type: NodePort
  selector:
    app: intro-app
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
