lab01/intro-ingress-minikube.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: intro-app
spec:
  rules:
    - host: briandemant.192.168.99.100.xip.io
      http:
        paths:
          - path: /
            backend:
              serviceName: intro-app
              servicePort: 80
